add api call to right place
